--- a/Androids.csproj
+++ b/Androids.csproj
@@ -44,7 +44,6 @@
     </Reference>
     <Reference Include="Assembly-CSharp">
       <HintPath>..\..\RimWorldWin64_Data\Managed\Assembly-CSharp.dll</HintPath>
-      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -180,6 +179,8 @@
     <Compile Include="Workers\ThoughtWorker_LoverMentality.cs" />
     <Compile Include="Workers\ThoughtWorker_transhumanist.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
